force-app/main/default/objects/Post_Service_Follow_up__c/Post_Service_Follow_up__c.object-meta.xml
<CustomObject>
    <label>Post Service Follow-up</label>
    <nameField>
        <displayFormat>PSF-{0000}</displayFormat>
        <label>PSF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Service Follow-ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>