force-app/main/default/objects/Post_Service_Follow_up__c/fields/PSF_Date__c.field-meta.xml
<CustomField>
    <fullName>PSF_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>PSF Date</label>
    <type>Date</type>
</CustomField>