force-app/main/default/objects/Post_Service_Follow_up__c/fields/PSF_Remarks__c.field-meta.xml
<CustomField>
    <fullName>PSF_Remarks__c</fullName>
    <label>PSF Remarks</label>
    <type>TextArea</type>
</CustomField>