force-app/main/default/objects/Post_Service_Follow_up__c/fields/Type_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Activity__c</fullName>
    <label>Type of Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installation Feedback</fullName>
            </value>
            <value>
                <fullName>First Follow UP</fullName>
            </value>
            <value>
                <fullName>Second Follow UP</fullName>
            </value>
            <value>
                <fullName>Third Follow UP</fullName>
            </value>
            <value>
                <fullName>Fourth Follow UP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>